[package]
name = "ethnum"
version = "1.0.4"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"
description = "256-bit unsigned integer implementation"
documentation = "https://docs.rs/ethnum"
readme = "README.md"
homepage = "https://github.com/nlordell/ethnum-rs"
repository = "https://github.com/nlordell/ethnum-rs"
license = "MIT OR Apache-2.0"
keywords = ["integer", "u256", "ethereum"]
categories = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[workspace]
members = ["bench", "intrinsics"]

[features]
llvm-intrinsics = ["ethnum-intrinsics"]
serde = ["impl-serde", "crate-serde"]
default = ["serde"]

[dependencies]
ethnum-intrinsics = { version = "1", path = "intrinsics", optional = true }
impl-serde = { version = "0.3", default-features = false, optional = true }
rlp = { version = "0.5", optional = true }
crate-serde = { package = "serde", version = "1", optional = true }

[dev-dependencies]
crate-serde = { package = "serde", version = "1", features = ["derive"] }
serde_json = "1"
